k8s/istio/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: robot-shop-mtls
  namespace: robot-shop
spec:
  mtls:
    mode: PERMISSIVE
