k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: robot-shop
  namespace: robot-shop
spec:
  hosts:
    - "*"
  gateways:
    - robot-shop-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: web
            port:
              number: 8080
